@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.1 2012/05/03 21:21:58 jdf Exp $
+$NetBSD: distinfo,v 1.2 2012/05/09 22:44:06 jdf Exp $
 
-SHA1 (fscd-1.0.1.tar.gz) = 61f66925b6660c5c49d811343c0132e1bf79d2c4
-RMD160 (fscd-1.0.1.tar.gz) = 735505f201c767e77524a0c1e702a2fa9e79c01a
-Size (fscd-1.0.1.tar.gz) = 19360 bytes
+SHA1 (fscd-1.1.tar.gz) = 8d17ec035fbe7b90aeefdff23042a07a7d65c2c7
+RMD160 (fscd-1.1.tar.gz) = 0c9aae223825e5fda61d88007b7abb4c30a61c18
+Size (fscd-1.1.tar.gz) = 16295 bytes
