@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.3543 2012/11/11 21:31:18 jakllsch Exp $
+$NetBSD: CHANGES-2012,v 1.3544 2012/11/11 21:36:36 jakllsch Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -5415,3 +5415,4 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated comms/asterisk18 to 1.8.18.0 [jnemeth 2012-11-11]
 	Updated net/py-boto to 2.6.0 [jakllsch 2012-11-11]
 	Added textproc/py-prettytable version 0.6.1 [jakllsch 2012-11-11]
+	Updated sysutils/fscd to 1.1 [jdf 2012-11-12]
